--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>SMKN 1 MAJA</h2>
     <img src="kucing.jpg" alt="float" class="float">
     <div><p><i id="font">Hai.</i> <br>
-    Saya <b class="box">Diandra Fauzi Ramadhani</b> saya berasal dari Ds.Sadasari tepatnya di blok Gunung Herang Landeuh,<br>
+    Saya <b class="box">Andra fr</b> saya berasal dari Ds.Sadasari tepatnya di blok Gunung Herang Landeuh,<br>
     saya juga salah satu siswa dari <u class="box">SMKN 1 MAJA dari kelas XI PPLG 1 </u>
     </p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti ipsa fuga quibusdam magni amet,
